--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,16 +7,11 @@ on:
     tags:
       - 'v*'
 
-env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
-
 jobs:
   build-and-release:
     runs-on: ubuntu-latest
     permissions:
       contents: write
-      packages: write
       
     steps:
       - name: Checkout code
@@ -48,6 +43,26 @@ jobs:
           echo "version=$VERSION" >> $GITHUB_OUTPUT
           echo "Version: $VERSION"
 
+      - name: Extract release notes from tag
+        if: startsWith(github.ref, 'refs/tags/')
+        id: release_notes
+        run: |
+          # Get annotated tag message (everything after first line)
+          TAG_NAME=${GITHUB_REF#refs/tags/}
+          
+          # Extract tag annotation body (skip subject line)
+          RELEASE_BODY=$(git tag -l --format='%(contents:body)' "$TAG_NAME")
+          
+          # If no body, use subject
+          if [ -z "$RELEASE_BODY" ]; then
+            RELEASE_BODY=$(git tag -l --format='%(contents:subject)' "$TAG_NAME")
+          fi
+          
+          # Output for GitHub Actions (handle multiline)
+          echo "body<<EOF" >> $GITHUB_OUTPUT
+          echo "$RELEASE_BODY" >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
+
       - name: Build binaries
         run: |
           VERSION=${{ steps.version.outputs.version }}
@@ -68,44 +83,6 @@ jobs:
           cd dist
           sha256sum * > checksums.txt
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Log in to Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Extract metadata
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          tags: |
-            type=ref,event=branch
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=semver,pattern={{major}}
-            type=sha
-            type=raw,value=latest,enable={{is_default_branch}}
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          platforms: linux/amd64,linux/arm64,linux/arm/v7
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          build-args: |
-            VERSION=${{ steps.version.outputs.version }}
-            COMMIT=${{ github.sha }}
-            BUILD_DATE=${{ github.event.head_commit.timestamp }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
       - name: Create Release
         if: startsWith(github.ref, 'refs/tags/')
         uses: softprops/action-gh-release@v1
@@ -113,8 +90,10 @@ jobs:
           files: |
             dist/pve-exporter-*
             dist/checksums.txt
+          body: ${{ steps.release_notes.outputs.body }}
           generate_release_notes: true
           draft: false
           prerelease: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
